# ocr-services-eval

./: .env.example  README.md  app.py  llm_services.py  ocr_services.py  pyproject.toml
