[tool.poetry]
name = "ocr-testing"
version = "0.1.0"
description = ""
authors = ["andymiller-og <anm5030@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
streamlit = "^1.43.1"
boto3 = "^1.37.9"
dotenv = "^0.9.9"
pdf2image = "^1.17.0"
langchain = "^0.3.20"
python-dotenv = "^1.0.1"
langchain-anthropic = "^0.3.9"
langchain-openai = "^0.3.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
